--- a/web-app/src/app/my-course/index/index.component.html
+++ b/web-app/src/app/my-course/index/index.component.html
@@ -28,12 +28,12 @@
           </select>
         </div>
         <div class="form-group mb-2">
-          <button class="btn btn-outline-success mb-2" type="submit">查询</button>
+          <button class="btn btn-outline-success mb-2" type="submit" style="margin-top: 9px;">查询</button>
         </div>
       </form>
     </div>
-    <div class="col-md-4">
-      <a class="btn btn-primary mb-2" routerLink="/course/course"><span class="oi oi-plus"></span>管理我的课程</a>
+    <div class="col-md-4" >
+      <a class="btn btn-primary mb-2" routerLink="/course/course" style="margin-top: 99px;"><span class="oi oi-plus"></span>管理我的课程</a>
     </div>
     <div class="col-md-4" style="margin-left: 950px;margin-top: -145px">
       <a class="btn btn-primary mb-2" (click)="openAddDialog()"><span class="oi oi-plus"></span>添加别人的课程</a>
