--- a/web-app/src/app/term/index/index.component.html
+++ b/web-app/src/app/term/index/index.component.html
@@ -1,8 +1,8 @@
 <div class="container-md main">
   <div class="row">
     <div class="col-md-8">
-      <form (ngSubmit)="onQuery()" class="form-inline">
-        <div class="form-group school" style="width: 260px;">
+      <form (ngSubmit)="onQuery()" class="form-inline" style="width: 1241px;">
+        <div class="form-group school" style="width: 313px;">
           <label for="params.school_id">学校名称：</label>
           <!-- 默认提示选项 -->
           <select class="form-control mr-2" name="params.school_id" id="params.school_id" [(ngModel)]="params.school_id">
@@ -16,7 +16,7 @@
           <label>学期名称：</label>
           <input class="form-control mr-2" name="name" [formControl]="params.name" type="text"/>
         </div>
-        <button  class="btn btn-outline-success mb-2 search" type="submit">查询</button>
+        <button  class="btn btn-outline-success mb-2 search" type="submit" style="margin-top: 9px;">查询</button>
       </form>
     </div>
     <div class="col-md-4 text-right">
